--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/aricionur/rabbitMQ-queue-implementations/issues"
   },
-  "homepage": "https://github.com/aricionur/rabbitMQ-queue-implementations#readme"
+  "homepage": "https://github.com/aricionur/rabbitMQ-queue-implementations#readme",
+  "dependencies": {
+    "amqplib": "^0.10.3"
+  }
 }
